crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.dont-hoist-inline-reference/error.txt
Found 1 error:

Todo: [hoisting] EnterSSA: Expected identifier to be defined before being used

Identifier x$1 is undefined.

error.dont-hoist-inline-reference.ts:3:2
  1 | import {identity} from 'shared-runtime';
  2 | function useInvalid() {
> 3 |   const x = identity(x);
    |   ^^^^^^^^^^^^^^^^^^^^^^ [hoisting] EnterSSA: Expected identifier to be defined before being used
  4 |   return x;
  5 | }
  6 |
